src/main/default/objects/Job__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>test change</description>
    <inlineHelpText>Date and time work actually finished on the job.</inlineHelpText>
    <label>Actual End Date</label>
    <type>DateTime</type>
</CustomField>