src/main/default/objects/Job__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <inlineHelpText>Date and time work actually started on the job.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>