src/main/default/objects/Job__c/fields/AFE_Number__c.field-meta.xml
<CustomField>
    <fullName>AFE_Number__c</fullName>
    <inlineHelpText>Identifying number of the authority for expenditure (AFE) for the job.</inlineHelpText>
    <label>AFE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>