src/main/default/objects/Job__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category used to classify the job.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
                <default>true</default>
                <label>Job</label>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>