src/main/default/objects/Job__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>Name of the customer's representative at the work site.</inlineHelpText>
    <label>Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>