src/main/default/objects/Job__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <inlineHelpText>Phone number for the customer's representative at the work site.</inlineHelpText>
    <label>Contact Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>