src/main/default/objects/Job__c/fields/Created_in_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the job was added in FieldFX Mobile. This checkbox is selected automatically for all jobs added in FieldFX Mobile.</inlineHelpText>
    <label>Created in Mobile</label>
    <type>Checkbox</type>
</CustomField>