src/main/default/objects/Job__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <inlineHelpText>Customer's purchase order number for the job.</inlineHelpText>
    <label>Customer PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>