src/main/default/objects/Job__c/fields/Customer_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Amount__c</fullName>
    <inlineHelpText>Agreed price for the job as indicated in the customer's purchase order for the job.</inlineHelpText>
    <label>Customer PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>