src/main/default/objects/Job__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Customer for the job.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Customer)</relationshipLabel>
    <relationshipName>JobsCustomer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>