src/main/default/objects/Job__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <description>Directions to the job site.</description>
    <inlineHelpText>Travel directions to the work site.</inlineHelpText>
    <label>Directions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>