src/main/default/objects/Job__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <inlineHelpText>Identifying number assigned to the job.</inlineHelpText>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>