src/main/default/objects/Job__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Office responsible for completing the job.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Office)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>