src/main/default/objects/Job__c/fields/Primary_Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Job_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact record for the customer's representative at the work site.</inlineHelpText>
    <label>Primary Job Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>