src/main/default/objects/Job__c/fields/Projected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_End_Date__c</fullName>
    <inlineHelpText>Date and time work is scheduled to finish on the job.</inlineHelpText>
    <label>Projected End Date</label>
    <type>DateTime</type>
</CustomField>