src/main/default/objects/Job__c/fields/Projected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start_Date__c</fullName>
    <inlineHelpText>Date and time work is scheduled to start on the job.</inlineHelpText>
    <label>Projected Start Date</label>
    <type>DateTime</type>
</CustomField>