src/main/default/objects/Job__c/fields/Requested_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date__c</fullName>
    <inlineHelpText>Date and time the customer requested work to start on the job.</inlineHelpText>
    <label>Requested Start Date</label>
    <type>DateTime</type>
</CustomField>