src/main/default/objects/Job__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Business segment for the job.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>