src/main/default/objects/Job__c/fields/Site_Address1__c.field-meta.xml
<CustomField>
    <fullName>Site_Address1__c</fullName>
    <inlineHelpText>First line of the work site address.</inlineHelpText>
    <label>Site Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>