src/main/default/objects/Job__c/fields/Site_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_2__c</fullName>
    <inlineHelpText>Second line of the work site address.</inlineHelpText>
    <label>Site Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>