src/main/default/objects/Job__c/fields/Site_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Arrival_Date__c</fullName>
    <inlineHelpText>Date and time the job crew arrived at the work site.</inlineHelpText>
    <label>Site Arrival Date</label>
    <type>DateTime</type>
</CustomField>