src/main/default/objects/Job__c/fields/Site_City__c.field-meta.xml
<CustomField>
    <fullName>Site_City__c</fullName>
    <inlineHelpText>City where the work site is located.</inlineHelpText>
    <label>Site City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>