src/main/default/objects/Job__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <inlineHelpText>Country where the work site is located.</inlineHelpText>
    <label>Site Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>