src/main/default/objects/Job__c/fields/Site_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Departure_Date__c</fullName>
    <inlineHelpText>Date and time the job crew departed the work site.</inlineHelpText>
    <label>Site Departure Date</label>
    <type>DateTime</type>
</CustomField>