src/main/default/objects/Job__c/fields/Site_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Site_Latitude__c</fullName>
    <inlineHelpText>Latitude of the work site.</inlineHelpText>
    <label>Site Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>