src/main/default/objects/Job__c/fields/Site_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Site_Longitude__c</fullName>
    <inlineHelpText>Longitude of the work site.</inlineHelpText>
    <label>Site Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>