src/main/default/objects/Job__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <inlineHelpText>State where the work site is located.</inlineHelpText>
    <label>Site State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>