src/main/default/objects/Job__c/fields/Site_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip__c</fullName>
    <inlineHelpText>Postal code for the work site.</inlineHelpText>
    <label>Site Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>