src/main/default/objects/Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Current status of the job.</inlineHelpText>
    <label>Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>