src/main/default/objects/Job__c/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync bit to flag on/off item for download</description>
    <inlineHelpText>If selected, the job syncs to FieldFX Mobile.</inlineHelpText>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>