src/main/default/objects/Job__c/fields/SyncID__c.field-meta.xml
<CustomField>
    <fullName>SyncID__c</fullName>
    <description>Trigger will populate this property when it is null. It should populate with a guid if possible.</description>
    <inlineHelpText>Unique identifier assigned automatically after syncing.</inlineHelpText>
    <label>SyncID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>