src/main/default/objects/Job__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Warehouse where equipment used on the job is stored. When you select a warehouse, the ticket items added to tickets for the job will be from the specified warehouse by default.</inlineHelpText>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>