src/main/default/objects/Job__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the well being serviced for the job.</inlineHelpText>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>