src/main/default/objects/Job__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <label>Service Job</label>
</RecordType>