src/main/default/objects/Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Tracking_Number__c</columns>
    <columns>CustomerAccount__c</columns>
    <columns>Office__c</columns>
    <columns>Segment__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Projected_Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
    <language>en_US</language>
</ListView>